# pythonproject

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
src/pythonproject/: __init__.py  dsl.py  registry.py  serializer.py  validator.py
